--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +10,8 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-    background: linear-gradient(86deg, rgba(2, 53, 163, 0.918) 0%, rgba(199, 196, 2, 0.267) 100%);
+  background: linear-gradient(86deg, rgba(2, 53, 163, 0.918) 0%, rgba(199, 196, 2, 0.267) 100%);
+  height: 100%;
 }
 
 button{
